API: Add /users/{id}/angeltypes, updated openapi formatting
